#deploy update CI settings

--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -16,11 +16,10 @@ jobs:
       - name: Build React app
         run: yarn build
       - name: Deploy to server
-        uses: easingthemes/ssh-deploy@v2.2.5
+        uses: easingthemes/ssh-deploy@v4
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        with:
-          server: ${{ secrets.SERVER }}
-          username: ${{ secrets.USERNAME }}
-          destination: ${{ secrets.DIST }}
-          source: build/
+          SOURCE: build/
+          REMOTE_HOST: ${{ secrets.SERVER }}
+          REMOTE_USER: ${{ secrets.USERNAME }}
+          TARGET: ${{ secrets.DIST }}
